--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
               </div>
               <div class="evolution__col">
                 <div class="evolution__preview first"><img src="/img/preview_1.png" alt="alt"/></div>
+                <div class="evolution__preview second"><img src="/img/preview_2.png" alt="alt"/></div>
                 <div class="evolution__preview third"><img src="/img/preview_3.png" alt="alt"/></div>
               </div>
             </div>
